# walde

./: .gitignore  CMakeLists.txt  README.md  best_benchmarking_results.txt
benchmarks/: bench_workloads.h  benchmark_main.cpp  benchmark_result.h  benchmark_runner.cpp  lru_cache.h  trace_bench.h  wtinylfu_cache.h
docs/: architecture.md
include/: cache_engine.h  cache_stripe.h  count_min_sketch.h  demotion_drainer.h  demotion_queue.h  latency_instrumentation.h  lru_list.h  slab_allocator.h  storage_backend.h  striped_cache.h  trace_loader.h  types.h  workload_generator.h
src/: cache_engine.cpp  cache_stripe.cpp  count_min_sketch.cpp  demotion_drainer.cpp  demotion_queue.cpp  lru_list.cpp  slab_allocator.cpp  storage_backend.cpp  striped_cache.cpp  trace_loader.cpp  workload_generator.cpp
tests/: CMakeLists.txt  test_cache_engine.cpp  test_cache_stripe.cpp  test_cms.cpp  test_demotion_drainer.cpp  test_demotion_queue.cpp  test_lru_list.cpp  test_slab_allocator.cpp  test_striped_cache.cpp  test_trace_loader.cpp
traces/: download.sh  sample_csv.csv
